--- a/proyectodbd/resources/sass/app.scss
+++ b/proyectodbd/resources/sass/app.scss
@@ -6,3 +6,17 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.navMenu
+{
+    background-color: #002F6C;
+}
+
+.slider
+{
+    background-color: #002F6C;
+}
+
+div.navMenu{
+    background-color: #002F6C;
+}
